--- a/src/App.css
+++ b/src/App.css
@@ -42,19 +42,27 @@
 }
 
 .container{
-  position: relative;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
 }
 
 .input{
-  position: absolute;
-  top:0px;
-  height: auto;
+  position: relative;
   width: 400px;
 }
 
+.input input{
+  width: 100%;
+}
+
 .results{
+  position:absolute;
+  left: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
   background-color: black;
